[gd_scene load_steps=3 format=3 uid="uid://btb5pope7n6c8"]

[ext_resource type="PackedScene" uid="uid://b2n4lfelw7wcv" path="res://button/code_lang_button.tscn" id="2_s3324"]
[ext_resource type="Script" path="res://value/scripts/code_value.gd" id="2_sk4i7"]

[node name="CodeValue" type="CodeEdit"]
custom_minimum_size = Vector2(360, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1
indent_wrapped_lines = true
draw_control_chars = true
draw_tabs = true
draw_spaces = true
line_folding = true
line_length_guidelines = Array[int]([120, 80])
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("2_sk4i7")

[node name="CodeLangButton" parent="." instance=ExtResource("2_s3324")]
layout_mode = 1
offset_left = -117.0
offset_bottom = 31.0

[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="code_changed" from="CodeLangButton" to="." method="_on_code_changed"]
